--- a/ky-webapp/src/main/resources/log4j.properties
+++ b/ky-webapp/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=WARN,NTconsole,errorFiles
 # Spring framework log level
 # Application log level
 #log4j.logger.bank.convepay=INFO
-log4j.logger.com.dtdream.ics=WARN
+log4j.logger.com.ky.logic=WARN
 log4j.logger.org.springframework=WARN
 
 log4j.appender.NTconsole=org.apache.log4j.ConsoleAppender
