--- a/ky-webapp/src/main/resources/persistence-security.properties
+++ b/ky-webapp/src/main/resources/persistence-security.properties
@@ -2,7 +2,7 @@
 web.server.protocol=http
 web.server.host=localhost
 web.server.port=8080
-web.server.project=ics-manage
+web.server.project=ky
 web.server.rootUrl=${web.server.protocol}://${web.server.host}:${web.server.port}/${web.server.project}
 view.login.page=/view/login/login.html
 login.failureHandler.url=/control/login/loginFailed
@@ -23,7 +23,7 @@ api.udp.server.port=8800
 
 # 人脸识别服务
 face.server.protocol=http
-face.server.host=10.160.5.62
+face.server.host=192.168.0.62
 face.server.port=8080
 face.server.url=${face.server.protocol}://${face.server.host}:${face.server.port}/face
 face.accesskey.id=cplat
