--- a/ky-webapp/src/main/resources/persistence-mysql.properties
+++ b/ky-webapp/src/main/resources/persistence-mysql.properties
@@ -5,6 +5,6 @@ hibernate.hbm2ddl.auto=update
 
 hibernate.connection.driverClass=org.mariadb.jdbc.Driver
 
-hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/ics?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
+hibernate.connection.url=jdbc:mysql://127.0.0.1:3306/ky?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
 hibernate.connection.username=root
 hibernate.connection.password=123456
